fair amount of automatic refacto